<resources>
    <string name="app_name">eVigour</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_push_up_duration_title">Time Duration</string>

    <string name="pref_title_training_method">Training Method</string>
    <string-array name="pref_training_method_list_titles">
        <item>Time Duration</item>
        <item>Number of Push Ups</item>
    </string-array>
    <string-array name="pref_training_method_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="prefernce_key">preference_key</string>
    <string name="preference_title">Autosave Time</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications Tone</string>

    <string name="pref_evigour_notifications">eVigour Notification</string>

    <string name="pref_evigour_ringtone">eVigour Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_number_of_push_up_title">Number of Push Up</string>
    <string name="pref_push_up_duration_default">5</string>
    <string name="pref_daily_reminder">Remind Me</string>
    <string name="evigour_default_ringtone">content://settings/system/notification_sound</string>
    <string name="pref_push_up_reminder_default">1</string>
    <string name="pref_push_up_reminder_interval">Reminder Interval</string>
</resources>
