...
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:id="@+id/gif_animation"
        android:layout_width="wrap_content"
        android:contentDescription="gif"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/count_down"
        android:layout_centerHorizontal="true"
...


    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="START"
        android:background="@color/colorPrimary"
        android:textSize="24sp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
...
